fix: section 6 alignment

--- a/style.css
+++ b/style.css
@@ -450,7 +450,12 @@ button {
 
 .radios>* {
     font-family: Raleway;
+    cursor: pointer;
 
+}
+
+.radio > input {
+    cursor: pointer;
 }
 
 
@@ -1045,6 +1050,7 @@ label span {
 .section-4-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 60px;
     padding: 30px 50px;
     z-index: 10;
@@ -1172,7 +1178,6 @@ label span {
 .section-4-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     gap: 1rem;
 }
 
